// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadBar /> should render 1`] = `
<UploadBar__StyledUploadBar
  active={false}
>
  <div
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <input
      autoComplete="off"
      multiple={true}
      onChange={[Function]}
      onClick={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex={-1}
      type="file"
    />
    <span>
      Drag file here to upload
    </span>
  </div>
  <Button
    color="blue"
    disabled={false}
    icon="upload"
    onClick={[Function]}
    tipPlacement="top"
    type="button"
  >
    Upload
  </Button>
</UploadBar__StyledUploadBar>
`;

exports[`<UploadBar /> should render optional message 1`] = `
<UploadBar__StyledUploadBar
  active={false}
>
  <div
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <input
      autoComplete="off"
      multiple={true}
      onChange={[Function]}
      onClick={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex={-1}
      type="file"
    />
    <span>
      Foobar
    </span>
  </div>
  <Button
    color="blue"
    disabled={false}
    icon="upload"
    onClick={[Function]}
    tipPlacement="top"
    type="button"
  >
    Upload
  </Button>
</UploadBar__StyledUploadBar>
`;
